--- a/app/Server/package.json
+++ b/app/Server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,13 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "env": "^0.0.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "nodemailer": "^7.0.3",
-    "pg": "^8.16.0",
-    "session": "^0.1.0"
+    "pg": "^8.16.0"
   }
 }
