--- a/app/Server/package.json
+++ b/app/Server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0"
   }
