--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bootswatch": "^5.3.6",
+    "csv-parser": "^3.2.0",
+    "express-session": "^1.18.1",
+    "js": "^0.1.0",
+    "multer": "^2.0.1",
+    "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.0.0"
   }
 }
