--- a/app/Server/package.json
+++ b/app/Server/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.18.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "qrcode": "^1.5.4",
+    "uuid": "^11.1.0"
   }
 }
