--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bcrypt": "^6.0.0",
     "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.6",
     "csv-parser": "^3.2.0",
+    "dayjs": "^1.11.13",
     "express-session": "^1.18.1",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.18.1",
     "js": "^0.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.1",
     "next": "15.3.2",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.0.0"
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   }
 }
