--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3"
