--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.6",
@@ -32,5 +34,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3"
+  },
+  "devDependencies": {
+    "postcss": "^8.5.6"
   }
 }
