--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "express-session": "^1.18.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.18.1",
+    "html5-qrcode": "^2.3.8",
+    "install": "^0.13.0",
     "js": "^0.1.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.1",
     "next": "15.3.2",
+    "npm": "^11.4.2",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
