--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.6",
+    "chart.js": "^4.5.0",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
     "express-session": "^1.18.1",
@@ -31,6 +32,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
